feat: Update get_up.py, til, and get_up.yml files
- Update `GET_UP_ISSUE_NUMBER` from `1` to `5`
- Fix condition for `is_get_up_early` to include hours from 3 to 24
- Comment out alternative condition for `is_get_up_early` from 3 to 9
- Update message sent to Telegram group with weather information
- Write name of TIL file to `knowledge.txt`
- Create comment on issue with updated message and image link
- Send media group to Telegram group with caption as message body
- Open TIL file, escape content, and send as message to Telegram group
- Delete `til` file
- Change line `git add .` to `git add OUT_DIR/* knowledge.txt`

--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -43,6 +43,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add .
+          git add OUT_DIR/* knowledge.txt
           git commit -m "generated today pic" || echo "no need to commit "
           git push || echo "no file change"
