feat: suno test
Signed-off-by: yihong0618 <zouzou0208@gmail.com>

--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -9,7 +9,8 @@ on:
 
 env:
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-  OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE}}
+  SUNO_COOKIE: ${{ secrets.SUNO_COOKIE }}
+  OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE }}
 
 jobs:
   sync:
