--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -11,6 +11,7 @@ env:
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   SUNO_COOKIE: ${{ secrets.SUNO_COOKIE }}
   OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE }}
+  SD_API_KEY: ${{ secrets.SD3_KEY }}
 
 jobs:
   sync:
@@ -45,7 +46,7 @@ jobs:
           retry_on: error
           command: |
             git clone https://github.com/$MORNING_USER_NAME/$MORNING_REPO_NAME.git --depth 1
-            python get_up.py ${{ secrets.G_T }} ${{ github.repository }}  "${{ secrets.BING_COOKIE }}" --weather_message ": ${{ github.event.inputs.message }}" --tele_token ${{ secrets.TG_TOKEN }} --tele_chat_id ${{ secrets.TG_CHAT_ID }}
+            python get_up.py ${{ secrets.G_T }} ${{ github.repository }}  --weather_message ": ${{ github.event.inputs.message }}" --tele_token ${{ secrets.TG_TOKEN }} --tele_chat_id ${{ secrets.TG_CHAT_ID }}
       - name: Push New Pic
         run: |
           git config --local user.email "action@github.com"
