--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -47,6 +47,7 @@ jobs:
           command: |
             git clone https://github.com/$MORNING_USER_NAME/$MORNING_REPO_NAME.git --depth 1
             python get_up.py ${{ secrets.G_T }} ${{ github.repository }}  --weather_message ": ${{ github.event.inputs.message }}" --tele_token ${{ secrets.TG_TOKEN }} --tele_chat_id ${{ secrets.TG_CHAT_ID }}
+            rm -rf til
       - name: Push New Pic
         run: |
           git config --local user.email "action@github.com"
