--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -10,6 +10,7 @@ on:
 env:
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   SUNO_COOKIE: ${{ secrets.SUNO_COOKIE }}
+  LUMA_COOKIE: ${{ secrets.LUMA_COOKIE }}
   OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE }}
   SD_API_KEY: ${{ secrets.SD3_KEY }}
 
