--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -40,12 +40,7 @@ jobs:
       #     echo "MORNING_BRANCH_NAME=$(git remote show https://github.com/${parts[0]}/${parts[1]}.git | awk '/HEAD branch/ {print $NF}')" >> $GITHUB_ENV
       
       - name: GET UP
-        uses: nick-fields/retry@v3
-        with:
-          timeout_seconds: 1200 
-          max_attempts: 1
-          retry_on: error
-          command: |
+          run: |
             python get_up.py ${{ secrets.G_T }} ${{ github.repository }}  --weather_message ": ${{ github.event.inputs.message }}" --tele_token ${{ secrets.TG_TOKEN }} --tele_chat_id ${{ secrets.TG_CHAT_ID }}
 
       - name: Push New Pic
