--- a/.github/workflows/get_up.yml
+++ b/.github/workflows/get_up.yml
@@ -28,15 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-      # - name: GET RANDOM REOO
-      #   run: |
-      #     repos=("jbranchaud/til" "simonw/til" "thoughtbot/til" "yihong0618/til") # add more repos here
-      #     random_repo=${repos[$RANDOM % ${#repos[@]}]}
-      #     IFS='/' read -ra parts <<< "$random_repo"
-      #     echo "MORNING_USER_NAME=${parts[0]}" >> $GITHUB_ENV
-      #     echo "MORNING_REPO_NAME=${parts[1]}" >> $GITHUB_ENV
-      #     echo "MORNING_BRANCH_NAME=$(git remote show https://github.com/${parts[0]}/${parts[1]}.git | awk '/HEAD branch/ {print $NF}')" >> $GITHUB_ENV
-      
+
       - name: GET UP
         run: |
           python get_up.py ${{ secrets.G_T }} ${{ github.repository }}  --weather_message ": ${{ github.event.inputs.message }}" --tele_token ${{ secrets.TG_TOKEN }} --tele_chat_id ${{ secrets.TG_CHAT_ID }}
@@ -45,6 +37,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add OUT_DIR/* knowledge.txt
+          git add OUT_DIR/* knowledge.txt questions.txt
           git commit -m "generated today pic" || echo "no need to commit "
           git push || echo "no file change"
